fix spacing on pull to refresh

--- a/app/events/events.scss
+++ b/app/events/events.scss
@@ -42,4 +42,7 @@
     border-top: 1px solid #eee;
     margin-top: -11px;
   }
+  .ionic-refresher-content {
+    margin-bottom: 15px;
+  }
 }
